--- a/pharmacy_frontend/package.json
+++ b/pharmacy_frontend/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/react-chartjs": "^2.1.3",
     "@reduxjs/toolkit": "^2.1.0",
+    "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.1",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-redux": "^9.1.0",
