--- a/pharmacy_frontend/package.json
+++ b/pharmacy_frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@coreui/react-chartjs": "^2.1.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.11",
     "@mui/x-charts": "^6.19.5",
     "@reduxjs/toolkit": "^2.1.0",
     "bootstrap": "^5.3.3",
