--- a/pharmacy_frontend/package.json
+++ b/pharmacy_frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.11",
     "@mui/x-charts": "^6.19.5",
     "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.1",
     "react": "^18.2.0",
